// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableTemplateSitewideOptions different configurations are formatted with euiSelectableTemplateSitewideFormatOptions() 1`] = `
[
  {
    "append": <EuiAvatar
      name="Default Space"
      size="s"
      type="space"
    />,
    "aria-label": "aria-label",
    "avatar": {
      "name": "Default Space",
    },
    "className": "euiSelectableTemplateSitewide__listItem testClass1 testClass2",
    "css": {
      "name": "hzx95w-euiTestCss",
      "styles": "color:red;label:euiTestCss;",
      "toString": [Function],
    },
    "data-test-subj": "test-this",
    "key": "Basic data application",
    "label": "Basic data application",
    "meta": [
      {
        "text": "Application",
        "type": "application",
      },
    ],
    "prepend": undefined,
    "title": "Basic data application • Application",
    "url": "welcome-dashboards",
  },
  {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "icon": {
      "type": "user",
    },
    "key": "Platform with deployment highlighted",
    "label": "Platform with deployment highlighted",
    "meta": [
      {
        "text": "Account",
        "type": "platform",
      },
      {
        "highlightSearchString": true,
        "text": "personal-databoard",
        "type": "deployment",
      },
    ],
    "prepend": <EuiIcon
      color="subdued"
      size="l"
      type="user"
    />,
    "title": "Platform with deployment highlighted • Account, personal-databoard",
  },
  {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "icon": {
      "color": "accent",
      "type": "warning",
    },
    "key": "Other metas",
    "label": "Other metas",
    "meta": [
      {
        "text": "Article",
        "type": "article",
      },
      {
        "text": "Case",
        "type": "case",
      },
      {
        "text": "Text",
      },
      {
        "text": "I have a custom type",
        "type": "PINK",
      },
    ],
    "prepend": <EuiIcon
      color="accent"
      size="l"
      type="warning"
    />,
    "searchableLabel": "Totally custom with pink metadata",
    "title": "Other metas • Article, Case, Text, I have a custom type",
  },
]
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() 1`] = `
<React.Fragment>
  <EuiHighlight
    className="euiSelectableTemplateSitewide__listItemTitle"
    search=""
  >
    Basic data application
  </EuiHighlight>
  <span
    className="euiSelectableTemplateSitewide__optionMetasList"
  >
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--application euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="application"
    >
      Application
    </EuiHighlight>
  </span>
</React.Fragment>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() 2`] = `
<React.Fragment>
  <EuiHighlight
    className="euiSelectableTemplateSitewide__listItemTitle"
    search=""
  >
    Platform with deployment highlighted
  </EuiHighlight>
  <span
    className="euiSelectableTemplateSitewide__optionMetasList"
  >
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--platform euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="platform"
    >
      Account
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--deployment euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="deployment"
    >
      personal-databoard
    </EuiHighlight>
  </span>
</React.Fragment>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() 3`] = `
<React.Fragment>
  <EuiHighlight
    className="euiSelectableTemplateSitewide__listItemTitle"
    search=""
  >
    Other metas
  </EuiHighlight>
  <span
    className="euiSelectableTemplateSitewide__optionMetasList"
  >
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--article euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="article"
    >
      Article
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--case euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="case"
    >
      Case
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta"
      search=""
    >
      Text
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--PINK euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="PINK"
    >
      I have a custom type
    </EuiHighlight>
  </span>
</React.Fragment>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() and search text 1`] = `
<React.Fragment>
  <EuiHighlight
    className="euiSelectableTemplateSitewide__listItemTitle"
    search="data"
  >
    Basic data application
  </EuiHighlight>
  <span
    className="euiSelectableTemplateSitewide__optionMetasList"
  >
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--application euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="application"
    >
      Application
    </EuiHighlight>
  </span>
</React.Fragment>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() and search text 2`] = `
<React.Fragment>
  <EuiHighlight
    className="euiSelectableTemplateSitewide__listItemTitle"
    search="data"
  >
    Platform with deployment highlighted
  </EuiHighlight>
  <span
    className="euiSelectableTemplateSitewide__optionMetasList"
  >
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--platform euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="platform"
    >
      Account
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--deployment euiSelectableTemplateSitewide__optionMeta"
      search="data"
      type="deployment"
    >
      personal-databoard
    </EuiHighlight>
  </span>
</React.Fragment>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() and search text 3`] = `
<React.Fragment>
  <EuiHighlight
    className="euiSelectableTemplateSitewide__listItemTitle"
    search="data"
  >
    Other metas
  </EuiHighlight>
  <span
    className="euiSelectableTemplateSitewide__optionMetasList"
  >
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--article euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="article"
    >
      Article
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--case euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="case"
    >
      Case
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta"
      search=""
    >
      Text
    </EuiHighlight>
    <EuiHighlight
      className="euiSelectableTemplateSitewide__optionMeta--PINK euiSelectableTemplateSitewide__optionMeta"
      search=""
      type="PINK"
    >
      I have a custom type
    </EuiHighlight>
  </span>
</React.Fragment>
`;
